base/controller-router/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kraftnetes-controller-router
  namespace: kraftnetes
  labels:
    app: kraftnetes-controller-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kraftnetes-controller-router
  template:
    metadata:
      labels:
        app: kraftnetes-controller-router
    spec:
      containers:
        - name: kraftnetes-controller-router
          image: kraftnetes/controller-router
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          env: []
