base/controller-router/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-controller-router-service
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-controller-router
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
