base/controller-router/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress
  namespace: kraftnetes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/controller(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: kraftnetes-controller-router-service
            port:
              number: 8080
